Apply the quirk that simple selectors of the form ':hover' apply only to links to those of the form '.class:hover' as well.  b=169078  r+sr=bzbarsky